# shako

./: &2'  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  Makefile  README.md  ROADMAP.md  SCOPE.md  shako-demo.cast
.agents/: team.yaml
.agents/adapters/: copilot-cli.md  crush.md  opencode.md
.agents/leads/: orchestrator.md
.agents/protocols/: definition-of-done.md  escalation.md  handoff.md
.agents/roles/: architect.md  developer.md  doc-writer.md  purifier.md  release-engineer.md  reviewer.md  tester.md
.agents/templates/: review-checklist.md  task-contract.md
.github/workflows/: ci.yml
.tasks/: backlog.yaml
.tasks/active/: README.md
benches/: core_perf.rs
docs/: ai-features.md  configuration.md  getting-started.md  new-user-guide.md  quick-reference.md  shell-features.md  slash-commands.md  smart-defaults.md
scripts/: install-tools.sh
src/: audit.rs  behavioral_profile.rs  builtins.rs  classifier.rs  control.rs  env_context.rs  executor.rs  fish_import.rs  incident.rs  journal.rs  learned_prefs.rs  lib.rs  main.rs  parser.rs  path_cache.rs  pipe_builder.rs  proactive.rs  safety.rs  setup.rs  slash.rs  smart_defaults.rs  spinner.rs  undo.rs
src/ai/: capability_scope.rs  client.rs  confirm.rs  context.rs  exfil_guard.rs  mod.rs  prompt.rs  prompt_guard.rs  render.rs
src/builtins/: alias.rs  dirs.rs  echo.rs  env.rs  history.rs  jobs.rs  mod.rs  nav.rs  query.rs  read.rs  set.rs  source.rs  state.rs  test.rs
src/config/: mod.rs  schema.rs
src/shell/: completer.rs  highlighter.rs  hinter.rs  (+3 more)
tests/: integration.rs
