[package]
name = "shako"
version = "0.2.0"
edition = "2024"
description = "A fish-inspired shell with transparent AI command translation"
license = "MIT"
repository = "https://github.com/solarisjon/shako"
rust-version = "1.85.0"

[[bin]]
name = "shako"
path = "src/main.rs"

[dependencies]
# Line editing (nushell's editor)
reedline = "0.46"

# Terminal
crossterm = "0.29"

# Async runtime (for LLM API calls)
tokio = { version = "1", features = ["full"] }

# HTTP client (for LLM API)
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "rustls-tls-webpki-roots"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Path/directory utilities
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Which (find executables in PATH)
which = "8"

# Edit distance (typo detection)
strsim = "0.11"

# Glob expansion
glob = "0.3"

# ANSI terminal styling (used by reedline highlighter/hinter)
nu-ansi-term = "0.50"

# Nix (Unix process control, signals)
[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.30", features = ["signal", "process", "fs", "term"] }
libc = "0.2"

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = "thin"
